generator client {
  provider   = "prisma-client-js"
  output     = "../generated/prisma"
  engineType = "library"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id       Int    @id @default(autoincrement())
  username String @unique
  email    String @unique
  password String
  role     String @default("USER")

  bookings Booking[]

  createdAt DateTime @default(now())
}

model Movie {
  id          Int     @id @default(autoincrement())
  title       String
  description String? @db.Text
  duration    Int
  genre       String?
  posterUrl   String?
  rating      Float?

  schedules Schedule[]

  createdAt DateTime @default(now())
}

model Schedule {
  id       Int      @id @default(autoincrement())
  movieId  Int
  showTime DateTime
  studio   String
  price    Float    @default(35000)

  movie    Movie     @relation(fields: [movieId], references: [id])
  bookings Booking[]

  createdAt DateTime @default(now())
}

model Booking {
  id         Int    @id @default(autoincrement())
  userId     Int
  scheduleId Int
  seatNumber String
  status     String @default("CONFIRMED")

  user     User     @relation(fields: [userId], references: [id])
  schedule Schedule @relation(fields: [scheduleId], references: [id])

  createdAt DateTime @default(now())

  @@unique([scheduleId, seatNumber])
}
