%%{init: {'theme': 'dark', 'themeVariables': {'primaryColor': '#cba6f7', 'primaryTextColor': '#cdd6f4', 'primaryBorderColor': '#b4befe', 'lineColor': '#94e2d5', 'secondaryColor': '#45475a', 'tertiaryColor': '#313244', 'background': '#1e1e2e', 'mainBkg': '#45475a', 'nodeBorder': '#b4befe', 'clusterBkg': '#313244', 'titleColor': '#cdd6f4', 'edgeLabelBackground': '#45475a', 'fontFamily': 'JetBrainsMono Nerd Font'}}}%%
erDiagram
    USER {
        int id PK
        string username UK
        string email UK
        string password
        string role "default: USER"
        datetime createdAt
    }
    MOVIE {
        int id PK
        string title
        text description "nullable"
        int duration
        string genre "nullable"
        string posterUrl "nullable"
        float rating "nullable"
        datetime createdAt
    }
    SCHEDULE {
        int id PK
        int movieId FK
        datetime showTime
        string studio
        float price "default: 35000"
        datetime createdAt
    }
    BOOKING {
        int id PK
        int userId FK
        int scheduleId FK
        string seatNumber
        string status "default: CONFIRMED"
        datetime createdAt
    }
    USER ||--o{ BOOKING : "1 places N"
    MOVIE ||--o{ SCHEDULE : "1 has N"
    SCHEDULE ||--o{ BOOKING : "1 contains N"
    SCHEDULE }o--|| MOVIE : "N belongs to 1"
    BOOKING }o--|| USER : "N belongs to 1"
    BOOKING }o--|| SCHEDULE : "N belongs to 1"
